syntax = "proto3";

package helloworld;

option go_package = "github.com/utahta/grpc-go-protoreflect-example/gen/helloworld;helloworld";

import "option/option.proto";

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {
    option (option.tag) = TAG_A;
  }
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
